--- a/Curso metodologia de la ciencia de datos/Introducción al análsis exploratorio de datos/calidad-del-aire/calidad_aire_EDA.html
+++ b/Curso metodologia de la ciencia de datos/Introducción al análsis exploratorio de datos/calidad-del-aire/calidad_aire_EDA.html
@@ -457,8 +457,8 @@ display: none;
 <li>Analisis de correlacion entre variables.</li>
 </ol>
 </div>
-<div id="paso-1-cargar-las-librerias" class="section level3">
-<h3>Paso 1: Cargar las librerias</h3>
+<div id="paso-1-cargar-las-librerias" class="section level2">
+<h2>Paso 1: Cargar las librerias</h2>
 <pre class="r"><code>#Carga de librerias
 library(readr)
 library(ggplot2)
@@ -466,8 +466,8 @@ library(Hmisc)
 library(corrplot)
 library(dplyr)</code></pre>
 </div>
-<div id="paso-2-cargar-datos" class="section level3">
-<h3>Paso 2: Cargar datos</h3>
+<div id="paso-2-cargar-datos" class="section level2">
+<h2>Paso 2: Cargar datos</h2>
 <pre class="r"><code>calidad_aire&lt;- 
   read_delim(&quot;data/calidad-del-aire-datos-historicos-diarios.csv&quot;,
              delim=&quot;;&quot;, col_names = TRUE, locale = locale(encoding = &quot;UTF-8&quot;))</code></pre>
@@ -486,8 +486,8 @@ library(dplyr)</code></pre>
 ## #   Provincia &lt;chr&gt;, Estación &lt;chr&gt;, Latitud &lt;dbl&gt;, Longitud &lt;dbl&gt;,
 ## #   Posición &lt;chr&gt;</code></pre>
 </div>
-<div id="paso-3-analisis-exploratorio" class="section level3">
-<h3>Paso 3: Analisis exploratorio</h3>
+<div id="paso-3-analisis-exploratorio" class="section level2">
+<h2>Paso 3: Analisis exploratorio</h2>
 <p>La función <strong>str()</strong> permite conocer de forma compacta
 la estructura interna de la tabla de datos indicando el tipo de
 variables, los rangos de valores y una muestra de dichos valores donde
@@ -577,8 +577,8 @@ Longitud y Latitud y Posición, para georreferenciar cada una de las
 estaciones de calidad de aire de Castilla y León.</li>
 </ul>
 </div>
-<div id="paso-4-ajuste-de-tipos-de-variables." class="section level3">
-<h3>paso 4: Ajuste de tipos de variables.</h3>
+<div id="paso-4-ajuste-de-tipos-de-variables." class="section level2">
+<h2>paso 4: Ajuste de tipos de variables.</h2>
 <p>Debemos verificar que cada variable se ha almacenado con el tipo de
 valor que corresponde. Por ejemplo, que las variables que contienen
 valores numéricos representan números y las cualitativas o categóricas
@@ -719,6 +719,56 @@ función str()</p>
 ##   ..   Posición = col_character()
 ##   .. )
 ##  - attr(*, &quot;problems&quot;)=&lt;externalptr&gt;</code></pre>
+</div>
+<div id="paso-5-deteccion-y-tratamiento-de-datos-ausentes." class="section level2">
+<h2>Paso 5: Deteccion y tratamiento de datos ausentes.</h2>
+<p>Con la función <em>is.na()</em> comprobamos la existencia de valores
+ausentes. El resultado de esta función es un vector lógico (TRUE o
+FALSE), de tal forma que cuando el objeto (por ejemplo, un valor, una
+lista o la columna de una tabla) que se evalúa presenta un valor ausente
+devuelve TRUE, en caso contrario devuelve FALSE. Existen otras funciones
+muy útiles, que también se pueden usar para evaluar la existencia de
+NAs: la función <em>any(is.na())</em> devuelve TRUE si la tabla presenta
+al menos un valor ausente, sin indicar el número de valores perdidos que
+presenta la tabla, ni la posición; la función sum(is.na()), permite
+determinar el número de valores ausentes; <em>mean(is.na())</em>,
+muestra el porcentaje de valores perdidos que presenta la tabla con la
+cual estamos trabajando.</p>
+<pre class="r"><code># Devuelve el número de NAs que presenta la tabla
+sum(is.na(calidad_aire))</code></pre>
+<pre><code>## [1] 1162811</code></pre>
+<pre class="r"><code># Devuelve el % de valores perdidos
+mean(is.na(calidad_aire))</code></pre>
+<pre><code>## [1] 0.2172598</code></pre>
+<p>En ocasiones conviene realizar una detección de valores ausentes por
+columnas, en lugar de por filas, para identificar si alguna de las
+variables del dataset presenta un determinado nivel de datos perdidos.
+Para ello podemos utilizar la función <em>colMeans(is.na())</em> y la
+función <em>colSums(is.na())</em>.</p>
+<pre class="r"><code># Detección del número de valores perdidos en cada una de 
+#las columnas que presenta la tabla
+colSums(is.na(calidad_aire))</code></pre>
+<pre><code>##     Fecha        CO        NO       NO2        O3      PM10      PM25       SO2 
+##         0    344856     30984     32517    170600    101435    392230     89737 
+## Provincia  Estacion   Latitud  Longitud 
+##         0         0       226       226</code></pre>
+<pre class="r"><code># Detección del % de valores perdidos en cada una de 
+#las columnas que presenta la tabla
+round(colMeans(is.na(calidad_aire)),2)</code></pre>
+<pre><code>##     Fecha        CO        NO       NO2        O3      PM10      PM25       SO2 
+##      0.00      0.77      0.07      0.07      0.38      0.23      0.88      0.20 
+## Provincia  Estacion   Latitud  Longitud 
+##      0.00      0.00      0.00      0.00</code></pre>
+<p>Analizando el conjunto de datos con el cual estamos trabajando en
+esta guía, podemos observar que la tabla “calidad_aire” presenta un
+total de <strong>116.281</strong> valores perdidos, el
+<strong>21%</strong> del total.</p>
+<p>Si analizamos los <em>NA’s</em>, en cada una de las variables, dos de
+ellas: <em>CO</em> y <em>PM25</em>, presenta un porcentaje superior al
+<em>50%</em>, del <em>77%</em> y <em>88% </em>respectivamente, lo que
+conlleva una ausencia significativa de información en el dataset de
+trabajo. Esta anomalía debe ser tratada de alguna forma para disminuir
+su impacto en el objetivo de reutilización de los datos.</p>
 </div>
 
 
